[workspace]
resolver = "2"
members = [
  "rotth",
  "rotth-lexer",
  "rotth-parser",
  "rotth-analysis",
  "rotth-lsp",
  "spanner",
  "simplearena",
  "chisel",
  "itempath",
]

[workspace.dependencies]
chumsky = "1.0.0-alpha.6"
logos = "0.14"
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
smol_str = { version = "0.2", features = ["serde"] }
thiserror = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread"] }
internment = "0.7.4"
