[package]
name = "chisel"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
serde.workspace = true

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tokio.workspace = true
tower-http = { version = "0.5.2", features = ["trace"] }
axum = "0.7.4"
axum-macros = "0.4.1"
itempath = { path = "../itempath" }
