[package]
name = "rotth-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
somok = "1.5.0"
simplearena = { path = "../simplearena" }
fnv.workspace = true
rotth-lexer = { path = "../rotth-lexer" }
rotth-parser = { path = "../rotth-parser" }
spanner = { path = "../spanner" }
itempath = { path = "../itempath" }
thiserror.workspace = true
smol_str.workspace = true
internment.workspace = true
