[package]
name = "rotth-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rotth = { path = ".." }
# chumsky = "0.8.0"
chumsky = { git = "https://github.com/zesterer/chumsky.git" }
# env_logger = "0.9.0"
ropey = "1.3.2"
# serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.16.0" }
# serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
# log = "0.4.14"
# im-rc = "15.0.0"
somok = "1.3.0"
