[package]
name = "rotth-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky.workspace = true

rotth = { path = "../rotth" }
ropey = "1.3.2"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0" }
dashmap = "5.1.0"
somok = "1.3.0"
rotth-parser = { path = "../rotth-parser" }
rotth-lexer = { path = "../rotth-lexer" }
spanner = { path = "../spanner" }
smol_str.workspace = true
