[package]
name = "rotth-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky.git" }
spanner = { path = "../spanner" }
rotth-lexer = { path = "../rotth-lexer" }
somok = "*"
logos = "0.12"
fnv = "1.0"
smol_str = "0.1.23"
thiserror = "1.0"
