[package]
name = "rotth-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky.workspace = true
logos.workspace = true

spanner = { path = "../spanner" }
rotth-lexer = { path = "../rotth-lexer" }
somok = "1.5.0"
fnv = "1.0"
smol_str.workspace = true
internment.workspace = true
thiserror.workspace = true
itempath = { path = "../itempath" }
