[package]
name = "rotth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
simplearena = { path = "../simplearena" }
indoc = "2.0"
fnv = "1.0"
rotth-lexer = { path = "../rotth-lexer" }
rotth-parser = { path = "../rotth-parser" }
rotth-analysis = { path = "../rotth-analysis" }
spanner = { path = "../spanner" }
itempath = { path = "../itempath" }
chumsky.workspace = true
ariadne.workspace = true
smol_str.workspace = true
internment.workspace = true
thiserror.workspace = true
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
  "llvm15-0-force-dynamic",
] }

target-lexicon = "0.12"
cranelift = "0.106"
cranelift-jit = "0.106"
cranelift-module = "0.106"
cranelift-preopt = "0.92"
capstone = "0.12"
